# MarginX

./: A.CSV  AND_scope.cir  AND_scope.txt  AND_scope_out.cir  CITATION.cff  CMakeLists.txt  DATA.CSV  DATA.TXT  Makefile  MarginX  MarginX.cpp  NDROC_LFB.cir  NDROC_LFB.txt  NDROC_LFB_opt.cir  NDROC_LFB_out.cir  NDRO_scope.cir  NDRO_scope.txt  NDRO_scope_opt.cir  NDRO_scope_out.cir  README.md  SA.xlsx  a.csv  data.txt  ex03.cir  ex03_out.cir  ex04.cir  ex05.cir  ex05_out.cir  file.cpp  file.hpp  judge.cpp  judge.hpp  main  makecir.cpp  makecir.hpp  margin.cpp  margin.hpp  margin.py  mew  mew.cpp  (+17 more)
include/: function.hpp
include/conventional/: file.hpp  judge.hpp  makecir.hpp  margin.hpp  optimize.hpp
kari/: file.cpp  judge.cpp  main.cpp  makecir.cpp  margin.cpp  optimize.cpp
python_source/: margin.py  result.csv
src/calc_margin/: Margin.cpp  Margin_jsim.cpp  Margin_syn.cpp  margin_ele.cpp  margin_ele_jsim.cpp  margin_ele_syn.cpp
src/calc_margin_jsim/: Margin_jsim.cpp  (+2 more)
test/: DRORC_ver2.1.2.cir  DRORC_ver2.1.2.txt  NDROCex.cir  a.csv  a.html  dff.cir  dff.txt  dff_out.cir  dff_scope.cir  ex02.cir  ex02.txt  ex02_ind.cir  ex02_out.cir  ex03.cir  ex03.txt  ex03_out.cir  ex04.cir  ex04.txt  ex04_out.cir  ex04_out_out.cir  ex04_v2.cir  ex04_v2_out.cir  ex04_v2_out_out.cir  ex05.cir  ex05.txt  ex05_FGM.cir  ex05_out.cir  ex05_out_out.cir  jjind.cir  jjind.txt  jjind_out.cir  plot.gp  result.csv  result_dff.txt  result_ex02.txt  result_ex02_ind.txt  result_ex03.txt  result_ex04.txt  result_si_dff.txt  result_si_dff2.txt  (+12 more)
test_circuits/: test_JTL.cir  test_JTL.txt
(+89 files in other folders)
